// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tracks reducers should merge features data with existing tracks data after ADD_FEATURES_DATA action 1`] = `
Array [
  Object {
    "acousticness": 0.00076,
    "artist": "Odiseo",
    "danceability": 0.78,
    "duration_ms": 376000,
    "energy": 0.51,
    "id": "4rzfv0JLZfVhOhbSQ8o5jZ",
    "instrumentalness": 0.792,
    "liveness": 0.119,
    "name": "Api",
    "popularity": 0.04,
    "uri": "spotify:track:4rzfv0JLZfVhOhbSQ8o5jZ",
    "valence": 0.609,
  },
  Object {
    "acousticness": 0.979,
    "artist": "Vlasta Marek",
    "danceability": 0.177,
    "duration_ms": 730066,
    "energy": 0.0342,
    "id": "64IL0ZrOV7F6BDPm5fhfUa",
    "instrumentalness": 0.826,
    "liveness": 0.0806,
    "name": "Is",
    "popularity": 0.02,
    "uri": "spotify:track:64IL0ZrOV7F6BDPm5fhfUa",
    "valence": 0.0286,
  },
  Object {
    "acousticness": 0.0537,
    "artist": "LCD Soundsystem",
    "danceability": 0.53,
    "duration_ms": 401440,
    "energy": 0.829,
    "id": "4Cy0NHJ8Gh0xMdwyM9RkQm",
    "instrumentalness": 0.88,
    "liveness": 0.106,
    "name": "All I Want",
    "popularity": 0.42,
    "uri": "spotify:track:4Cy0NHJ8Gh0xMdwyM9RkQm",
    "valence": 0.948,
  },
  Object {
    "acousticness": 0.591,
    "artist": "Glenn Horiuchi Trio",
    "danceability": 0.508,
    "duration_ms": 358760,
    "energy": 0.07,
    "id": "6hvFrZNocdt2FcKGCSY5NI",
    "instrumentalness": 0.0726,
    "liveness": 0.0807,
    "name": "Endpoints",
    "popularity": 0,
    "uri": "spotify:track:6hvFrZNocdt2FcKGCSY5NI",
    "valence": 0.197,
  },
  Object {
    "acousticness": 0.934,
    "artist": "Zucchero",
    "danceability": 0.347,
    "duration_ms": 176093,
    "energy": 0.25,
    "id": "2E2znCPaS8anQe21GLxcvJ",
    "instrumentalness": 0.000345,
    "liveness": 0.118,
    "name": "You Are So Beautiful",
    "popularity": 0.22,
    "uri": "spotify:track:2E2znCPaS8anQe21GLxcvJ",
    "valence": 0.0505,
  },
]
`;

exports[`Tracks reducers should return a properly mapped array after ADD_TRACKS_DATA action 1`] = `
Array [
  Object {
    "artist": "Odiseo",
    "duration_ms": 376000,
    "id": "4rzfv0JLZfVhOhbSQ8o5jZ",
    "name": "Api",
    "popularity": 0.04,
    "uri": "spotify:track:4rzfv0JLZfVhOhbSQ8o5jZ",
  },
  Object {
    "artist": "Vlasta Marek",
    "duration_ms": 730066,
    "id": "64IL0ZrOV7F6BDPm5fhfUa",
    "name": "Is",
    "popularity": 0.02,
    "uri": "spotify:track:64IL0ZrOV7F6BDPm5fhfUa",
  },
  Object {
    "artist": "LCD Soundsystem",
    "duration_ms": 401440,
    "id": "4Cy0NHJ8Gh0xMdwyM9RkQm",
    "name": "All I Want",
    "popularity": 0.42,
    "uri": "spotify:track:4Cy0NHJ8Gh0xMdwyM9RkQm",
  },
  Object {
    "artist": "Glenn Horiuchi Trio",
    "duration_ms": 358760,
    "id": "6hvFrZNocdt2FcKGCSY5NI",
    "name": "Endpoints",
    "popularity": 0,
    "uri": "spotify:track:6hvFrZNocdt2FcKGCSY5NI",
  },
  Object {
    "artist": "Zucchero",
    "duration_ms": 176093,
    "id": "2E2znCPaS8anQe21GLxcvJ",
    "name": "You Are So Beautiful",
    "popularity": 0.22,
    "uri": "spotify:track:2E2znCPaS8anQe21GLxcvJ",
  },
]
`;

exports[`Tracks reducers should return existing state data after ADD_FEATURES_DATA action with mismatching data 1`] = `
Array [
  Object {
    "acousticness": 0.00076,
    "artist": "Odiseo",
    "danceability": 0.78,
    "duration_ms": 376000,
    "energy": 0.51,
    "id": "4rzfv0JLZfVhOhbSQ8o5jZ",
    "instrumentalness": 0.792,
    "liveness": 0.119,
    "name": "Api",
    "popularity": 0.04,
    "uri": "spotify:track:4rzfv0JLZfVhOhbSQ8o5jZ",
    "valence": 0.609,
  },
  Object {
    "acousticness": 0.979,
    "artist": "Vlasta Marek",
    "danceability": 0.177,
    "duration_ms": 730066,
    "energy": 0.0342,
    "id": "64IL0ZrOV7F6BDPm5fhfUa",
    "instrumentalness": 0.826,
    "liveness": 0.0806,
    "name": "Is",
    "popularity": 0.02,
    "uri": "spotify:track:64IL0ZrOV7F6BDPm5fhfUa",
    "valence": 0.0286,
  },
  Object {
    "acousticness": 0.0537,
    "artist": "LCD Soundsystem",
    "danceability": 0.53,
    "duration_ms": 401440,
    "energy": 0.829,
    "id": "4Cy0NHJ8Gh0xMdwyM9RkQm",
    "instrumentalness": 0.88,
    "liveness": 0.106,
    "name": "All I Want",
    "popularity": 0.42,
    "uri": "spotify:track:4Cy0NHJ8Gh0xMdwyM9RkQm",
    "valence": 0.948,
  },
  Object {
    "artist": "Glenn Horiuchi Trio",
    "duration_ms": 358760,
    "id": "6hvFrZNocdt2FcKGCSY5NI",
    "name": "Endpoints",
    "popularity": 0,
    "uri": "spotify:track:6hvFrZNocdt2FcKGCSY5NI",
  },
  Object {
    "artist": "Zucchero",
    "duration_ms": 176093,
    "id": "2E2znCPaS8anQe21GLxcvJ",
    "name": "You Are So Beautiful",
    "popularity": 0.22,
    "uri": "spotify:track:2E2znCPaS8anQe21GLxcvJ",
  },
]
`;
